[package]
name = "fertree"
version = "0.3.6"
authors = ["JT <mccronejt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[lib]
name = "rebl"
path = "src/lib.rs"

[dependencies]
structopt = "0.3.21"
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.6"
rand="0.8.3"
rand_distr = "0.4.3"
log = "0.4.0"
env_logger = "0.8.2"
exitcode = "1.1.2"
csv = "1.1.4"
clap-verbosity-flag = "0.3.1"
serde={version="1.0", features=["derive"]}
regex = "1.5"
rayon = "1.5.1"

#rayon = "1.5"
